# revm

./: Cargo.toml
.github/workflows/: ci.yml  ethereum-tests.yml
bins/revm-test/: CHANGELOG.md  Cargo.toml
bins/revme/: CHANGELOG.md  Cargo.toml
bins/revme/src/cmd/statetest/: runner.rs
bins/revme/src/statetest/: runner.rs
crates/interpreter/: CHANGELOG.md  Cargo.toml
crates/interpreter/src/: host.rs  interpreter.rs
crates/interpreter/src/host/: dummy.rs
crates/interpreter/src/instructions/: host.rs  host_env.rs  macros.rs  memory.rs  opcode.rs
crates/interpreter/src/interpreter/: analysis.rs
crates/precompile/: CHANGELOG.md  Cargo.toml
crates/precompile/src/: blake2.rs  bn128.rs  disable.rs  hash.rs  lib.rs  modexp.rs
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/: bytecode.rs  db.rs  env.rs  lib.rs  precompile.rs  specification.rs  state.rs  utilities.rs
crates/primitives/src/db/: components.rs
crates/primitives/src/env/: handler_cfg.rs
crates/revm/: CHANGELOG.md  Cargo.toml
crates/revm/src/: builder.rs  context.rs  evm.rs  evm_impl.rs  handler.rs  interpreter.rs  journaled_state.rs  lib.rs  models.rs  scroll.rs
crates/revm/src/context/: context_precompiles.rs  evm_context.rs  inner_evm_context.rs
crates/revm/src/db/: alloydb.rs  ethersdb.rs  in_memory_db.rs
crates/revm/src/db/states/: bundle_state.rs  cache.rs  (+3 more)
crates/revm/src/handler/: mainnet.rs  scroll.rs
crates/revm/src/inspector/: customprinter.rs
crates/revm/src/interpreter/: bytecode.rs
crates/revm/src/scroll/: handler_register.rs  l1block.rs
(+2 files in other folders)
