[workspace]
resolver = "2"
members = ["bins/*", "crates/*"]
default-members = ["crates/revm"]

[profile.release]
# debug = true

[profile.ethtests]
inherits = "test"
opt-level = 3

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1" }