[workspace]
members = [
    "bins/revme",
    "bins/revm-test",
    "crates/revm",
    "crates/primitives",
    "crates/interpreter",
    "crates/precompile",
]
resolver = "2"
default-members = ["crates/revm"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
codegen-units = 1
debug = true

[profile.ethtests]
inherits = "test"
opt-level = 3

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1" }